--- a/Botões Animados/Botões animados 2/index.html
+++ b/Botões Animados/Botões animados 2/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
    <meta charset="UTF-8">
@@ -7,7 +7,6 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Redes Sociais</title>
    <link rel="stylesheet" href="styles.css">
-   <link rel="js" href="js.js">
 </head>
 
 <body>
